use java.nio.file.Files.readString(java.nio.file.Path)